# ABINet-Kuzushiji

./: .gitignore  AGENTS.md  README.md  dataset.py  lit_datamodule.py  lit_module.py  lit_module_language.py  losses.py  main.py  pyproject.toml  runtime_utils.py  train_lightning.py  transforms.py  utils.py
configs/: lightning.yaml  lightning_language.yaml  lightning_language_huggingface.yaml  lightning_vision.yaml  pretrain_language_model.yaml  pretrain_language_model_huggingface.yaml  pretrain_language_model_huggingface_schedulefree.yaml  pretrain_language_model_japanese_classical.yaml  pretrain_vision_japanese_classical.yaml  pretrain_vision_japanese_classical_128x640.yaml  pretrain_vision_japanese_classical_64x256.yaml  pretrain_vision_japanese_classical_64x384.yaml  pretrain_vision_kuzushiji.yaml  template.yaml  train_abinet_japanese_classical.yaml  train_abinet_japanese_classical_128x640.yaml  train_abinet_japanese_classical_64x256.yaml  train_abinet_japanese_classical_64x384.yaml  train_abinet_kuzushiji.yaml
docs/: optimizers.md
modules/: backbone.py  model.py  model_abinet.py  model_abinet_iter.py  model_alignment.py  model_language.py  model_vision.py  transformer.py
tools/: build_classical_column_lmdb.py  build_kuzushiji_column_lmdb.py  build_kuzushiji_lmdb.py  create_charset_from_huggingface.py  create_language_corpus_from_lmdb.py
