[project]
name = "abinet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "datatrove>=0.6.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3%2Bcu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
    "huggingface_hub>=0.34.4",
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "jiwer>=4.0.0",
    "lightning>=2.6.0",
    "lmdb>=1.7.5",
    "matplotlib>=3.10.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "schedulefree>=1.4.1",
    "timm>=1.0.22",
    "torch==2.9.0",
    "torchvision==0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
    "wandb>=0.23.0",
]
